service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  labels:
    app: helloworld-service
spec:
  selector:
    app: helloworld-service
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
