ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: helloworld-service
              servicePort: 8080
            path: /helloworld
